# secret_santa

./: LICENSE  README.md
spbstu_ss/: .env  Cargo.toml
spbstu_ss/migrations/2023-01-04-140423_create_groups/: up.sql
spbstu_ss/migrations/2023-01-04-140426_create_users/: down.sql  up.sql
spbstu_ss/migrations/2023-01-04-140439_create_users_to_groups/: down.sql  up.sql
spbstu_ss/migrations/2023-01-04-140448_create_santas/: down.sql  up.sql
spbstu_ss/migrations/2023-01-06-210808_membership/: down.sql  up.sql
spbstu_ss/src/: auth.rs  controllers.rs  lib.rs  main.rs  models.rs  myschema.rs  schema.rs
spbstu_ss/src/controllers/: groups_controller.rs  memberships_controller.rs  santas_controller.rs  users_controller.rs
spbstu_ss/src/models/: auth_model.rs  group_model.rs  membership_model.rs  santa_model.rs  user_model.rs
spbstu_ss_client/: Cargo.toml
spbstu_ss_client/src/: main.rs
