[package]
name = "spbstu_ss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "=7.2"
rocket = "0.4.10"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8.5"
chrono = "0.4.23"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
